--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: none;
+}
+
 .container {
     width: 1000px;
     margin: auto;
@@ -212,8 +216,7 @@ header .shopping span {
     margin-left: 80%;
     position: fixed;
     bottom: 0;
-    right: 0;
-
+    left: 0;
 }
 
 #chat-messages {
