--- a/register.css
+++ b/register.css
@@ -7,7 +7,7 @@
 }
 
 .form-container {
-    width: 400px;
+    max-width: 400px;
     background-color: #fff;
     border-radius: 5px;
     padding: 20px;
