--- a/style.css
+++ b/style.css
@@ -5,22 +5,42 @@ body {
     box-sizing: border-box;
 }
 
-*:focus {
-    outline: none;
-}
-
 .container {
     width: 1000px;
     margin: auto;
     transition: 0.5s;
+}
 
+.list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+    row-gap: 20px;
+    margin-top: 50px;
+}
+
+.list .item button:hover {
+    background-color: orange;
 }
 
 .search {
     width: 100%;
     margin: 5%;
-    margin-left: 25%;
 }
+
+header .shopping div {
+    background: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    top: -28%;
+    right: -16%;
+    padding: 3px 10px;
+}
+
 
 #searchInput {
     width: 35%;
@@ -32,51 +52,13 @@ body {
     padding: 1%;
 }
 
-#searchButton:hover {
-    background-color: #add1f7;
-}
-
-
 header {
     display: grid;
     grid-template-columns: 1fr 50px;
     margin-top: 50px;
 }
 
-header .shopping {
-    position: relative;
-    text-align: right;
-
-}
-
-.register-btn {
-    width: 90px;
-    height: 20px;
-}
-
-header .shopping img {
-    width: 40px;
-    padding-top: 15px;
-}
-
-header .shopping span {
-    background: red;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    position: absolute;
-    top: 0px;
-    left: 99%;
-    padding: 3px 10px;
-}
-
 .list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 20px;
-    row-gap: 20px;
     margin-top: 50px;
 }
 
@@ -84,13 +66,12 @@ header .shopping span {
     text-align: center;
     background-color: #DCE0E1;
     padding: 20px;
-
-    letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 
 .list .item img {
     width: 90%;
-    height: 430px;
+    height: auto;
     object-fit: cover;
 }
 
@@ -119,14 +100,6 @@ header .shopping span {
     transition: 0.5s;
 }
 
-.add-to-cart {
-    cursor: pointer;
-}
-
-.list .item button:hover {
-    background-color: orange;
-}
-
 .active .card {
     left: calc(100% - 500px);
 }
@@ -151,7 +124,6 @@ header .shopping span {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-
 }
 
 .card .checkOut div {
@@ -195,11 +167,6 @@ header .shopping span {
 .listCard .count {
     margin: 0 10px;
 }
-
-.item button :hover {
-    background-color: orange;
-}
-
 
 #user {
     font-size: 25px;
@@ -256,7 +223,83 @@ header .shopping span {
 
 #login {
     background-color: #ccc;
-    padding-left: 40px;
-    padding-right: 70px;
+    padding-left: 20px;
+    padding-right: 50px;
     cursor: pointer;
+    margin-bottom: 54%;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 90%;
+        margin: auto;
+    }
+
+    .search {
+        margin: 3%;
+        margin-left: 0;
+    }
+
+    #searchInput {
+        width: 70%;
+    }
+
+    #searchButton {
+        width: 25%;
+    }
+
+    header {
+        margin-top: 30px;
+    }
+
+    .list .item {
+        padding: 10px;
+    }
+
+    .list .item img {
+        height: auto;
+    }
+
+    .card {
+        width: 90%;
+    }
+
+    #chat-container {
+        width: 90%;
+        margin-left: 5%;
+    }
+}
+
+@media (max-width: 576px) {
+    .search {
+        margin: 2%;
+    }
+
+
+    #searchInput {
+        width: 60%;
+    }
+
+    #searchButton {
+        width: 30%;
+    }
+
+    .list {
+        grid-template-columns: 1fr;
+
+    }
+
+    .list .item img {
+        width: 100%;
+        height: auto;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    #chat-container {
+        width: 100%;
+        margin-left: 0;
+    }
 }
